<resources>
    <string name="app_name">Times Tables Race</string>
    <string name="home_intro">Become a Super Champion in times tables and challenge your friends to see how many correct answers you can give in 30 seconds</string>
    <string name="start_button">start</string>
    <string name="time_remaining">Time:</string>
    <string name="score">Score:</string>
    <string name="back_not_allowed">Back not allowed during round</string>
    <string name="retry_button">retry</string>
    <string name="home_button">home</string>
    <string name="name_score_low">Student</string>
    <string name="name_score_medium">Expert</string>
    <string name="name_score_high">Champion</string>
    <string name="name_score_top">Superhero</string>
    <string name="name_score_max">Cosmic Legend</string>
    <string name="desc_score_low">Spend some more time studying times tables and you\'ll reach the next level soon</string>
    <string name="desc_score_medium">Keep training and you\'ll easily pass the class test</string>
    <string name="desc_score_high">You played like a real times tables champion!</string>
    <string name="desc_score_top">You\'re the Superhero of times tables!</string>
    <string name="desc_score_max">You\'re ready to rule the universe!</string>
    <string name="name_rank_low">Novice Learner</string>
    <string name="name_rank_medium">Rising Genius</string>
    <string name="name_rank_high">Sparkling Champion</string>
    <string name="name_rank_top">Supereme Hero</string>
    <string name="name_rank_max">Galactic Master</string>
    <string name="desc_rank_low">Your journey has just begun. Get ready to uncover the secrets of multiplication, one step at a time. With a little practice and dedication, you\'ll become a  master in no time!</string>
    <string name="desc_rank_medium">Congratulations! You\'ve conquered the first challenges and are now ready to embark on new adventures. Train your memory and keep testing your skills, and soon you\'ll be ready to ace any exam!</string>
    <string name="desc_rank_high">Wow! Your knowledge shines like gold! You\'ve shown great skill and speed, but the challenges aren\'t over yet. Get ready to test your mastery with even more complex and rapid multiplications. Will you be able to overcome every obstacle and reach the top?</string>
    <string name="desc_rank_max">Welcome to the Mount Olympus of multiplication! You have reached the pinnacle of knowledge, demonstrating absolute mastery of multiplication. Your speed and accuracy are unmatched, and your name will forever echo through the galaxy as a symbol of mathematical excellence. Now enjoy the view from the summit and continue to explore the infinite universe of numbers!</string>
    <string name="game_over">Time is up!</string>
    <string name="final_score">Your Score is:</string>
    <string name="menu">Menu</string>
    <string name="menu_start_new_game">Start new round</string>
    <string name="menu_play_last_game">Retry last round</string>
    <string name="menu_share_new_game">Challenge mode</string>
    <string name="menu_your_scores">Your progress</string>
    <string name="menu_settings">Settings</string>
    <string name="your_level">Level:</string>
    <string name="stat_num_rounds">Rounds:</string>
    <string name="stat_total_score">Score:</string>
    <string name="stat_avg_score">Avarage:</string>
    <string name="desc_rank_top">Incredible! Your mastery is legendary! You have faced every challenge with courage and determination, proving yourself a true hero. But your adventure is not over yet. Prepare for the final, epic trial that awaits you. Only the most skilled and swift will conquer the summit and become true legends!</string>
    <string name="your_best_round">Your best round:</string>
    <string name="replay_your_worst_round">Replay this round:</string>
    <string name="your_achievements">Your achievements:</string>
    <string name="current_rank">Current rank:</string>
    <string name="stats_round_level">Level:</string>
    <string name="stats_round_score">Score:</string>
    <string name="stats_round_time_left">Left:</string>
    <string name="stats_round_sec" translatable="false">s</string>
    <string name="new_achievement">New achievement</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="achieved_on">Achieved on:</string>
    <string name="round_number">Round number:</string>
    <string name="avarage_score">Avarage score:</string>
    <string name="achievement_requirements_desc">This achievement requires you to play at least %1$s rounds with an average score of %2$s.</string>
    <string name="requirements">Requirements</string>
    <string name="share_round_desc">"Challenge your friends to play the same round and see who comes out on top!"</string>
    <string name="share_round_howto">Get your friends in on the action! Scan the QR code or share it with your preferred app to challenge them.</string>
    <string name="round_code">Round code:</string>
    <string name="round_code_received">Received round code</string>
    <string name="received_round_code_quest">I received a challenge code</string>
    <string name="share_round_msg">Wanna challenge me to a times tables duel? Go to challenge mode in the \"Times Tables Race\" app and enter this code: %1$s</string>
    <string name="new_best_round">New Best Round</string>
    <string name="new_best_round_message">Congratulations! Your dedication and skill have paid off with a brand new high score! This is a huge milestone in your journey, keep striving for greatness!</string>
    <string name="uri_custom_scheme" translatable="false">timestablesrace</string>
    <string name="settings_game_group">Game settings</string>
    <string name="settings_extended_mode">Go Beyond 10</string>
    <string name="settings_extended_mode_desc">Enable to practice times tables up to 12</string>
    <string name="settings_overwrite_best_scores">Self-Sabotage</string>
    <string name="settings_overwrite_best_scores_desc">Enable this option to always save the score of a previously played round, even if it\'s lower</string>
    <string name="settings_look_and_feel_group">Look and Feel</string>
    <string name="settings_play_sounds">Play sounds</string>
    <string name="settings_play_sounds_desc">Enable sound effects during gameplay</string>
    <string name="settings_use_time_left">Track time left</string>
    <string name="settings_use_time_left_desc">Enable to compute the score using the time remaining after answering all questions</string>
    <string name="back_button">back</string>
    <string name="settings_support_group">Support</string>
    <string name="ic_arrow_forward">forward</string>
    <string name="settings_about">About</string>
    <string name="settings_about_desc">Get in touch and provide feedback</string>
    <string name="about_text_version">Version %1$s (%2$s)</string>
    <string name="about_text_feedback" >Please provide feedback and submit issues on</string>
    <string name="settings_theme">Color theme</string>
    <string name="settings_theme_desc">Set the app\'s color scheme</string>
    <string name="theme_light">Light theme</string>
    <string name="theme_dark">Dark theme</string>
    <string name="theme_system">System settings</string>
    <string name="round_complete">Round Complete!</string>
    <string name="round_code_valid">Valid Round Id</string>
    <string name="round_code_invalid">Invalid Round ID</string>
    <string name="settings_auto_confirm">Instant answers</string>
    <string name="settings_auto_confirm_desc" >Skip the \"Next\" button! This makes the game faster, but wrong answers will cost you points</string>
</resources>