...
                            imageVector = if (isValid) Icons.Filled.CheckCircle else Icons.Filled.Warning,
                            contentDescription = if (isValid) stringResource(R.string.round_code_valid) else stringResource(R.string.round_code_invalid),
                            tint = if (isValid) MaterialTheme.colorScheme.primary else Color.Red
                        )
                    }
                },
                modifier = Modifier.fillMaxWidth().testTag("inputCode")
            )
        } else {
            Text(
                text = stringResource(R.string.received_round_code_quest),
                style = MaterialTheme.typography.bodyLarge.copy(fontWeight = FontWeight.Bold),
                modifier = Modifier.clickable { showTextField = true }
...
@Composable
fun QRCodeImage(bitmap: Bitmap?, modifier: Modifier = Modifier) {
    bitmap?.let {
        Image(
            bitmap = bitmap.asImageBitmap(),
            contentDescription = "QR Code",
            modifier = modifier.testTag("qrcode")
        )
    }
}
